added reel writeup and fixed upcoming posts

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
 main:
   - title: "Home"
     url: /
-  - title: "Notes and Cheatsheets"
+  - title: "Notes"
     url: /notes/   
-  - title: "Upcoming Posts"
+  - title: "Upcoming"
     url: /upcoming/
  
   # - title: "About"
