added bastard, metasploitable 3 and writeups page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,13 @@
 main:
   - title: "Home"
     url: /
+  - title: "Writeups"
+    url: /writeups/
   - title: "Notes"
     url: /notes/   
   - title: "Upcoming"
     url: /upcoming/
+
  
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
