--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: "71xn@github.io:~#"
 email: f1nnl3strange@protonmail.ch
 description: >- # this means to ignore newlines until "baseurl:"
-  Cybersec blog with HackTheBox and CTF Writeups
+  Programming and Cybersec Blog with CTF Writeups
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 71xxn
