--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ repository: "71xn/71xn.github.io" # GitHub username/repo-name e.g. "mmistakes/mi
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: "Finn Lestrange" # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs: true # true, false (default)
+breadcrumbs: false # true, false (default)
 
 # Site Author
 author:
