cleaned up site

--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,12 @@ author:
   bio: "Computer Science Student."
   location: "Scotland, UK"
   links:
+    - label: "Links"
+      icon: "fas fa-fw fa-link"
+      url: "https://links.finnlestrange.tech"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:finn.lestrange@gmail.com"
-    - label: "Education Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:flestrange@isa.aberdeen.sch.uk"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/71xn"
