--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-minimal_mistakes_skin2: "dark" # Theme switching code here https://github.com/mmistakes/minimal-mistakes/discussions/2033
+minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin2: "mint" # Theme switching code here https://github.com/mmistakes/minimal-mistakes/discussions/2033
 
 # Site Settings
 locale: "en-US"
@@ -35,20 +35,36 @@ author:
   name: "Finn Lestrange"
   avatar: "/assets/images/profile-me.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "Computer Science Student."
-  location: "Scotland, UK"
+  location: "Glasgow, UK"
   links:
-    - label: "Links"
-      icon: "fas fa-fw fa-link"
-      url: "https://links.finnlestrange.tech"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:finn.lestrange@gmail.com"
+    - label: "University of Glasgow"
+      icon: "fas fa-fw fa-user-graduate"
+      url: "https://gla.ac.uk"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/71xn"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:finn.lestrange@gmail.com"
+    - label: "Links"
+      icon: "fas fa-fw fa-link"
+      url: "https://links.finnlestrange.tech"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-twitter"
       url: "https://twitter.com/finnlestrange"
+    - label: "HackTheBox"
+      icon: "fas fa-fw fa-cube"
+      url: "https://app.hackthebox.com/profile/210952"
+    - label: "Dev Site / Testing Server"
+      icon: "fas fa-fw fa-server"
+      url: "https://finnlestrange.dev"
+
+social:
+  type: Finn Lestrange
+  links:
+    - "https://github.com/71xn"
+    - "https://twitter.com/finnlestrange"
+    - "https://instagram.com/finn.lestragnge"
 
 # Site Footer
 footer:
