updated color scheme & portfolio page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,7 @@
 main:
   - title: "Blog"
     url: "/blog/"
+  - title: "Portfolio"
+    url: "/portfolio/"
   - title: "CV"
-    url: /files/CV.pdf
+    url: "/portfolio/#cv"
