--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-minimal_mistakes_skin2: "mint" # Theme switching code here https://github.com/mmistakes/minimal-mistakes/discussions/2033
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin2: "dark" # Theme switching code here https://github.com/mmistakes/minimal-mistakes/discussions/2033
 
 # Site Settings
 locale: "en-US"
@@ -55,7 +55,7 @@ author:
     - label: "HackTheBox"
       icon: "fas fa-fw fa-cube"
       url: "https://app.hackthebox.com/profile/210952"
-    - label: "Dev Site / Testing Server"
+    - label: "Testing Server"
       icon: "fas fa-fw fa-server"
       url: "https://finnlestrange.dev"
 
