--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,5 @@
 main:
   - title: "Blog"
     url: "/blog/"
-  - title: "Portfolio"
-    url: "/portfolio/"
   - title: "CV"
-    url: "/portfolio/#cv"
+    url: "https://github.com/71xn/71xn.github.io/raw/master/assets/files/CV.pdf"
